--- a/Delivery_final/Base.lproj/Main.storyboard
+++ b/Delivery_final/Base.lproj/Main.storyboard
@@ -19,30 +19,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6D9-LI-XKU">
-                                <rect key="frame" x="10" y="114" width="394" height="698"/>
+                                <rect key="frame" x="0.0" y="114" width="414" height="698"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="60" id="WIv-Hm-fk0" customClass="DeliveryViewCell" customModule="Delivery_final" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="394" height="60"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WIv-Hm-fk0" id="Tyw-Zl-q28">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e18-Nb-euc">
-                                                    <rect key="frame" x="60" y="0.0" width="330" height="59.5"/>
+                                                    <rect key="frame" x="70" y="0.0" width="330" height="59.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="330" id="hvh-xb-U4y"/>
                                                     </constraints>
-                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="82e-ek-ZUa">
-                                                    <rect key="frame" x="0.0" y="20" width="64" height="19.5"/>
+                                                    <rect key="frame" x="0.0" y="20" width="84" height="19.5"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6dJ-v8-n4o">
-                                                    <rect key="frame" x="349" y="21" width="35" height="18"/>
+                                                    <rect key="frame" x="369" y="21" width="35" height="18"/>
                                                     <state key="normal" title="Button" image="address_icon"/>
                                                     <connections>
                                                         <action selector="tapPickLocation:" destination="WIv-Hm-fk0" eventType="touchUpInside" id="jBh-Pv-Hau"/>
@@ -52,13 +51,14 @@
                                             <constraints>
                                                 <constraint firstItem="e18-Nb-euc" firstAttribute="top" secondItem="Tyw-Zl-q28" secondAttribute="top" id="3Qw-Ap-onl"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="6dJ-v8-n4o" secondAttribute="bottom" constant="10" id="5vo-zO-RMB"/>
+                                                <constraint firstAttribute="trailing" secondItem="82e-ek-ZUa" secondAttribute="trailing" constant="330" id="6nC-uO-poe"/>
                                                 <constraint firstAttribute="trailing" secondItem="82e-ek-ZUa" secondAttribute="trailing" constant="330" id="9tn-v5-qTD"/>
                                                 <constraint firstItem="6dJ-v8-n4o" firstAttribute="top" secondItem="Tyw-Zl-q28" secondAttribute="topMargin" constant="10" id="Izl-y0-xtp"/>
                                                 <constraint firstItem="82e-ek-ZUa" firstAttribute="top" secondItem="Tyw-Zl-q28" secondAttribute="top" constant="20" id="Jw2-1X-bgu"/>
                                                 <constraint firstAttribute="bottom" secondItem="e18-Nb-euc" secondAttribute="bottom" id="Oex-YA-ju5"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6dJ-v8-n4o" secondAttribute="trailing" constant="10" id="Zd1-bI-JVU"/>
                                                 <constraint firstItem="6dJ-v8-n4o" firstAttribute="leading" secondItem="82e-ek-ZUa" secondAttribute="trailing" constant="285" id="g5C-IX-KuB"/>
-                                                <constraint firstItem="e18-Nb-euc" firstAttribute="leading" secondItem="Tyw-Zl-q28" secondAttribute="leading" constant="60" id="i70-4M-YGS"/>
+                                                <constraint firstItem="e18-Nb-euc" firstAttribute="leading" secondItem="Tyw-Zl-q28" secondAttribute="leading" constant="70" id="iij-l6-jzX"/>
                                                 <constraint firstAttribute="bottom" secondItem="82e-ek-ZUa" secondAttribute="bottom" constant="20" id="tcn-cj-vWw"/>
                                                 <constraint firstItem="82e-ek-ZUa" firstAttribute="leading" secondItem="Tyw-Zl-q28" secondAttribute="leading" id="x1x-Z5-w0M"/>
                                             </constraints>
@@ -100,11 +100,11 @@
                         <color key="backgroundColor" red="0.26666666666666666" green="0.58039215686274503" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="hzR-0r-7aU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="2L8-BA-X3Y"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6D9-LI-XKU" secondAttribute="trailing" constant="10" id="DPJ-NH-B40"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6D9-LI-XKU" secondAttribute="trailing" id="5tO-18-DuD"/>
+                            <constraint firstItem="6D9-LI-XKU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Bhd-x2-Cci"/>
                             <constraint firstItem="hzR-0r-7aU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Iob-bW-TPh"/>
                             <constraint firstItem="Nhe-qd-ATQ" firstAttribute="leading" secondItem="hzR-0r-7aU" secondAttribute="trailing" constant="5" id="JF7-bq-BJA"/>
                             <constraint firstItem="VFu-N7-w6Q" firstAttribute="top" secondItem="6D9-LI-XKU" secondAttribute="bottom" constant="5" id="JjO-2C-rG8"/>
-                            <constraint firstItem="6D9-LI-XKU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="LJ1-dK-lUH"/>
                             <constraint firstItem="6D9-LI-XKU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="MW7-CB-Nb1"/>
                             <constraint firstItem="6D9-LI-XKU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="Mlf-eI-fUN"/>
                             <constraint firstItem="6D9-LI-XKU" firstAttribute="top" secondItem="hzR-0r-7aU" secondAttribute="bottom" constant="10" id="Qz5-5r-tYF"/>
