--- a/Delivery_final/Base.lproj/Main.storyboard
+++ b/Delivery_final/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                                     <rect key="frame" x="0.0" y="20" width="84" height="19.5"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6dJ-v8-n4o">
-                                                    <rect key="frame" x="369" y="21" width="35" height="18"/>
+                                                    <rect key="frame" x="369" y="21" width="25" height="18"/>
                                                     <state key="normal" title="Button" image="address_icon"/>
                                                     <connections>
                                                         <action selector="tapPickLocation:" destination="WIv-Hm-fk0" eventType="touchUpInside" id="jBh-Pv-Hau"/>
@@ -59,6 +59,7 @@
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6dJ-v8-n4o" secondAttribute="trailing" constant="10" id="Zd1-bI-JVU"/>
                                                 <constraint firstItem="6dJ-v8-n4o" firstAttribute="leading" secondItem="82e-ek-ZUa" secondAttribute="trailing" constant="285" id="g5C-IX-KuB"/>
                                                 <constraint firstItem="e18-Nb-euc" firstAttribute="leading" secondItem="Tyw-Zl-q28" secondAttribute="leading" constant="70" id="iij-l6-jzX"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6dJ-v8-n4o" secondAttribute="trailing" symbolic="YES" id="pa2-YI-CFB"/>
                                                 <constraint firstAttribute="bottom" secondItem="82e-ek-ZUa" secondAttribute="bottom" constant="20" id="tcn-cj-vWw"/>
                                                 <constraint firstItem="82e-ek-ZUa" firstAttribute="leading" secondItem="Tyw-Zl-q28" secondAttribute="leading" id="x1x-Z5-w0M"/>
                                             </constraints>
